# mangadex-home-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  dhat.out.3975303  docker-compose.yml  init_cache.sh  settings.sample.yaml  sqlx-data.json  tarpaulin-report.html
.github/workflows/: build_and_test.yml  coverage.yml
db_queries/: init.sql  insert_image.sql
docs/: ciphers.md  unstable_options.md
src/: cache.rs  client.rs  config.rs  fs.rs  index.html  main.rs  metrics.rs  ping.rs  routes.rs  state.rs  stop.rs  units.rs
src/cache/: compat.rs  disk.rs  disk_cache.rs  fs.rs  generational.rs  low_mem.rs  mem.rs  mem_cache.rs  mem_lfu.rs  mem_lru.rs  mod.rs
